@@ -1,3 +1,8 @@
+2004-03-31  David Woodhouse  <dwmw2@infradead.org>
+
+	* src/fs-ecos.c (jffs2_fo_write): Set ri.isize so that non-append
+	writes don't truncate the file.
+	
 2004-03-03  Thomas Koeller  <thomas.koeller@baslerweb.com>
 
         * src/fs-ecos.c: 
